# fourier-robot-descriptions

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  build.py  hatch_build.py  pyproject.toml
examples/: display_in_meshcat.py  display_urdf_frames.py
src/fourier_robot_descriptions/: __init__.py  _cache.py  _package_dirs.py  _repositories.py  fourier.py  generate.py
src/fourier_robot_descriptions/assets/base_urdf/: fourier_left_hand_12dof.urdf  fourier_left_hand_12dof_v1.urdf  fourier_left_hand_6dof.urdf  fourier_right_hand_12dof.urdf  fourier_right_hand_12dof_v1.urdf  fourier_right_hand_6dof.urdf  gr1t1.urdf  gr1t2.urdf  gr2t2.urdf  gr2t2d.urdf  gr2t2v2.urdf  qinglong.urdf
src/fourier_robot_descriptions/assets/meshes/fourier_hand_12dof/: L_hand_base_link.STL  L_index_intermediate_link.STL  L_index_metacarpal_link.STL  L_index_proximal_link.STL  L_middle_intermediate_link.STL  L_middle_proximal_link.STL  L_pinky_intermediate_link.STL  L_pinky_proximal_link.STL  L_ring_intermediate_link.STL  L_ring_proximal_link.STL  L_thumb_distal_link.STL  L_thumb_proximal_pitch_link.STL  L_thumb_proximal_yaw_link.STL  R_hand_base_link.STL  R_index_intermediate_link.STL  R_index_metacarpal_link.STL  R_index_proximal_link.STL  R_middle_intermediate_link.STL  R_middle_proximal_link.STL  R_pinky_intermediate_link.STL  R_pinky_proximal_link.STL  R_ring_intermediate_link.STL  R_ring_proximal_link.STL  R_thumb_distal_link.STL  R_thumb_proximal_pitch_link.STL  R_thumb_proximal_yaw_link.STL
src/fourier_robot_descriptions/assets/meshes/fourier_hand_12dof_v2/: L_hand_base_link.STL  L_index_intermediate_link.STL  L_index_metacarpal_link.STL  L_index_proximal_link.STL  L_middle_intermediate_link.STL  L_middle_proximal_link.STL  L_pinky_intermediate_link.STL  L_pinky_proximal_link.STL  L_ring_intermediate_link.STL  L_ring_proximal_link.STL  L_thumb_distal_link.STL  L_thumb_proximal_pitch_link.STL  L_thumb_proximal_yaw_link.STL  R_hand_base_link.STL  R_index_intermediate_link.STL  R_index_metacarpal_link.STL  R_index_proximal_link.STL  R_middle_intermediate_link.STL  R_middle_proximal_link.STL  R_pinky_intermediate_link.STL  R_pinky_proximal_link.STL  R_ring_intermediate_link.STL  R_ring_proximal_link.STL  R_thumb_distal_link.STL  R_thumb_proximal_pitch_link.STL  (+1 more)
src/fourier_robot_descriptions/assets/urdf/: GR1T1_fourier_hand_12dof.urdf  GR1T1_fourier_hand_6dof.urdf  GR1T1_inspire_hand.urdf  GR1T2_fourier_hand_12dof.urdf  GR1T2_fourier_hand_6dof.urdf  GR2T2_fourier_hand_12dof.urdf  GR2T2v2_fourier_hand_6dof.urdf  fourier_left_hand_12dof.urdf  fourier_left_hand_6dof.urdf  fourier_right_hand_12dof.urdf  fourier_right_hand_6dof.urdf  gr1t1_fourier_hand_12dof.urdf  gr1t1_fourier_hand_12dof_v2.urdf  gr1t1_fourier_hand_6dof.urdf  gr1t1_inspire_hand.urdf  gr1t2_fourier_hand_12dof.urdf  gr1t2_fourier_hand_6dof.urdf  gr1t2_inspire_hand.urdf  gr2t2_fourier_hand_12dof.urdf  gr2t2_fourier_hand_6dof.urdf  gr2t2d_fourier_hand_6dof.urdf  gr2t2v2_fourier_hand_12dof.urdf  gr2t2v2_fourier_hand_6dof.urdf  gr2t2v2_long.urdf  inspire_left_hand.urdf  inspire_right_hand.urdf  qinglong_fourier_hand_6dof.urdf
src/fourier_robot_descriptions/loaders/: pinocchio.py  yourdfpy.py
(+222 files in other folders)
