[project]
name = "fourier-robot-descriptions"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "gitpython>=3.1.44",
    "pin>=3.4.0",
    "rich>=14.0.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
yourdfpy = ["yourdfpy>=0.0.57"]

[build-system]
requires = ["hatchling", "hatchling[dev]"]
build-backend = "hatchling.build"


[tool.uv.sources]
pin = { index = "tuna" }
gitpython = { index = "tuna" }
tqdm = { index = "tuna" }
rich = { index = "tuna" }
yourdfpy = { index = "tuna" }
ruff = { index = "tuna" }
pyright = { index = "tuna" }

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true


[tool.ruff]
include = ["**/*.py", "**/*.pyi", "**/pyproject.toml"]
exclude = [".venv", "build", "dist"]
line-length = 120

[tool.ruff.lint]
select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle - Error
    "W",   # pycodestyle - Warning
    "F",   # Pyflakes
    'PLC',
    'PLE',
    'PLW', # Pylint
    "I",   # isort
    "UP",  # pyupgrade
    "NPY", # numpy
]
ignore = [
    "E501", # line-too-long
    "F401", # unused import
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]


[tool.pyright]
include = ["src/**/*.py"]
pythonVersion = "3.11"
pythonPlatform = "Linux"

[dependency-groups]
dev = ["pyright>=1.1.401", "ruff>=0.11.13"]

[tool.ruff.lint.pydocstyle]
convention = "google"
